# HeliosEngine

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  EditorSettings.txt  README.md  engine_raytrace.sln  engine_raytrace.vcxproj  imgui.ini
assets/defaults/: Default_CmakeLists.txt  Default_ComponentHeader.txt  Default_ComponentSource.txt  Default_EditorHeader.txt  Default_EditorSource.txt  Default_EmptyHeader.txt  Default_EmptySource.txt  Default_MainHeader.txt  Default_MainSource.txt
docs/: Notes.md  NotesPBR.md
include/: Engine.h
launcher/: CMakeLists.txt  main.cpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
pch/: PrecompC.h  PrecompCXX.h
src/: GDB_PrettyPrint.py  main.cpp  main.h
src/Assets/: AssetEditorView.cpp  AssetEditorView.h  AssetManager.cpp  AssetManager.h  ModelFileHandler.cpp  ModelFileHandler.h
src/Backends/OpenGL46_GLFW/Core/: GL46_Window.cpp  GL46_Window.h
src/Backends/OpenGL46_GLFW/Graphics/: GL46_ComputeShader.cpp  GL46_ComputeShader.h  GL46_ShaderBase.cpp  GL46_ShaderBase.h  GL46_Texture2D.cpp  GL46_Texture2D.h
src/Components/: Component.cpp  Component.h  Material.h  Sphere.h
src/Core/: Common.h  FileTools.cpp  FileTools.h  IconDefines.h  Keys.cpp  Keys.h  Timer.h  Window.cpp  Window.h
src/Debugger/: Debugger.cpp  Debugger.h
src/Editor/: EditorInterface.cpp  EditorInterface.h  EditorSettings.cpp  EditorSettings.h
src/Graphics/: Camera.cpp  Camera.h
src/Math/: Matrix.h  Random.cpp  Random.h  Vector.h  _VectorSwizzles.h  matrix.h  vector.h
src/Objects/: ObjectRenderer.cpp  ObjectRenderer.h
src/Projects/: ProjectHandler.cpp  ProjectHandler.h
src/Scene/: Scene.cpp  Scene.h  SceneEditor.cpp  SceneEditor.h  SceneObjects.cpp  SceneObjects.h  SceneStorage.cpp  SceneStorage.h
src/Shaders/: random.glsl  raytrace.comp
src/Shaders/Core/: common.glsl  random.glsl
src/Shaders/Raytracing/: intersections.glsl  lighting.glsl  materialStruct.glsl  materials.glsl  microfacet.glsl  ray.glsl  raytrace.comp
src/Viewport/: Viewport.cpp  Viewport.h
